# myplayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/myplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/android/myplayer/: MainActivity.kt  MyPlayer.java  OnPrepareListener.java  SurfacePreview.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/android/myplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
